--- a/HIOFCommuting/res/layout/fragment_login.xml
+++ b/HIOFCommuting/res/layout/fragment_login.xml
@@ -7,13 +7,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+	<LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
+		<ImageView
+                android:id="@+id/splash_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:contentDescription="Logo"
+                android:src="@drawable/campuskjoring_72" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="#AFDEFE"
+            android:textSize="28sp"
+            android:textStyle="italic"
+            android:typeface="serif" />
+
+    </LinearLayout>
+
+
     <EditText
         android:id="@+id/login_editText_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="113dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/email"
