--- a/HIOFCommuting/res/menu/main.xml
+++ b/HIOFCommuting/res/menu/main.xml
@@ -6,6 +6,13 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/-->
         
+    <item 
+        android:id="@+id/endreAdresse"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Endre adresse"
+        />
+        
     <item
         android:id="@+id/avmelding"
         android:orderInCategory="100"
